# basic_programming

./: .gitattributes  .gitignore
Homework_06_2/: Counter.cpp  Counter.h  Homework_06_2.sln  Homework_06_2.vcxproj  Homework_06_2.vcxproj.filters  Main.cpp
algo_homework_05_2/: Main.cpp  algo_homework_05_2.sln  algo_homework_05_2.vcxproj
algo_homework_06_1/: Main.cpp  algo_homework_06_1.sln  algo_homework_06_1.vcxproj
algo_homework_06_3/: Main.cpp  algo_homework_06_3.sln  algo_homework_06_3.vcxproj
algo_homework_1_1/: Main.cpp  algo_homework_1_1.sln  algo_homework_1_1.vcxproj
algo_homework_1_2/: Main.cpp  algo_homework_1_2.sln  algo_homework_1_2.vcxproj
algo_homework_2_01/: Main.cpp  algo_homework_2_01.sln  algo_homework_2_01.vcxproj
algo_homework_2_02/: Main.cpp  algo_homework_2_02.sln  algo_homework_2_02.vcxproj
algo_homework_3_01/: Main.cpp  Merge.cpp  Merge.h  algo_homework_3_01.sln  algo_homework_3_01.vcxproj  algo_homework_3_01.vcxproj.filters  mergeSort.cpp  mergeSort.h
algo_homework_3_02/: Main.cpp  Quick_sort.cpp  Quick_sort.h  algo_homework_3_02.sln  algo_homework_3_02.vcxproj  algo_homework_3_02.vcxproj.filters
algo_homework_3_03/: Count_Sort.cpp  Count_Sort.h  Main.cpp  algo_homework_3_03.sln  algo_homework_3_03.vcxproj  algo_homework_3_03.vcxproj.filters
algo_homework_4_01/: Main.cpp  algo_homework_4_01.sln  algo_homework_4_01.vcxproj
algo_homework_4_02/: Main.cpp  algo_homework_4_02.sln  algo_homework_4_02.vcxproj
algo_homework_4_03/: Main.cpp  algo_homework_4_03.sln  algo_homework_4_03.vcxproj
algo_homework_5_01/: Main.cpp  algo_homework_5_01.sln  algo_homework_5_01.vcxproj
algo_homework_6_02/: Main.cpp  algo_homework_6_02.sln  algo_homework_6_02.vcxproj
algo_homework_7_01/: Main.cpp  algo_homework_7_01.sln  algo_homework_7_01.vcxproj
algo_homework_7_02/: Main.cpp  algo_homework_7_02.sln  algo_homework_7_02.vcxproj
algo_homework_7_03/: Main.cpp  algo_homework_7_03.sln  algo_homework_7_03.vcxproj  algo_homework_7_03.vcxproj.filters
algo_homework_7_04/: Main.cpp  algo_homework_7_04.sln  algo_homework_7_04.vcxproj
algo_homework_8_01/: Main.cpp  algo_homework_8_01.sln  algo_homework_8_01.vcxproj  algo_homework_8_01.vcxproj.filters  readme.md
algo_homework_8_02/: Main.cpp  algo_homework_8_02.sln  algo_homework_8_02.vcxproj  algo_homework_8_02.vcxproj.filters  readme.md
course_project_2/: CMakeLists.txt  Main.cpp
course_project_2/Lib/Air/Broom/: Broom.cpp  Broom.h
course_project_2/Lib/Air/Eagle/: Eagle.cpp  Eagle.h
course_project_2/Lib/Air/MagicCarpet/: MagicCarpet.cpp  MagicCarpet.h
course_project_2/Lib/Air_vehicle/: AirVehicle.h
course_project_2/Lib/Base/: Vehicle.h
course_project_2/Lib/Ground/Boots/: Boots.cpp  Boots.h
course_project_2/Lib/Ground/Camel/: Camel.cpp  Camel.h
course_project_2/Lib/Ground/CamelFast/: CamelFast.cpp  CamelFast.h
course_project_2/Lib/Ground/Centaur/: Centaur.cpp  Centaur.h
course_project_2/Lib/Menu/: Menu.cpp  Menu.h
course_project_2/Lib/Sort/: Sort.cpp  Sort.h
course_project_2/Lib/Vehicle/: AbstractVehicle.h  CreatorVehicle.h
course_project_2/Lib/ground_vehicle/: groundvehicle.h
cppl_course_project/: Main.cpp  Parser.cpp  Parser.h  config.ini  config.ini.bak  cppl_course_project.sln  cppl_course_project.vcxproj  cppl_course_project.vcxproj.filters  readme.md
cppl_homewor_11_01/: Main.cpp  cppl_homewor_11_01.sln  cppl_homewor_11_01.vcxproj
cppl_homework_10_01/: Main.cpp  cppl_homework_10_01.sln  cppl_homework_10_01.vcxproj
cppl_homework_10_02/: cppl_homework_10_02.sln  cppl_homework_10_02.vcxproj
cppl_homework_10_03/: Main.cpp  cppl_homework_10_03.sln  cppl_homework_10_03.vcxproj  cppl_homework_10_03.vcxproj.filters  uniquePtr.h
cppl_homework_11_02/: BigInteger.cpp  BigInteger.h  Main.cpp  cppl_homework_11_02.sln  cppl_homework_11_02.vcxproj  cppl_homework_11_02.vcxproj.filters  readme.md
cppl_homework_2_01/: Main.cpp  Readme.md  cppl_homework_2_01.sln  cppl_homework_2_01.vcxproj  cppl_homework_2_01.vcxproj.filters
cppl_homework_3_01/: Main.cpp  Smart_array.cpp  Smart_array.h  cppl_homework_3_01.sln  cppl_homework_3_01.vcxproj  cppl_homework_3_01.vcxproj.filters
cppl_homework_3_02/: Main.cpp  Smart_array.cpp  (+3 more)
homework_10_2/: CMakeLists.txt  Main.cpp  homework_10_2.cpp
homework_10_2/Classes/Equilateral_triangle/: Equilateral_triangle.h
homework_10_2/Classes/Error/: Error.h
homework_10_2/Classes/Isosceles_triangle/: Isosceles_triangle.cpp
homework_10_2/Classes/Print/: Print.h
homework_10_2/Classes/Quadrangle/: Quadrangle.h
homework_10_2/Classes/Rectangle/: Rectangle.h
homework_10_2/Classes/Rhomb/: Rhomb.h
homework_10_2/Classes/Right_angled_triangle/: Right_angled_triangle.cpp  Right_angled_triangle.h
homework_10_2/Classes/Square/: Square.cpp  Square.h
homework_10_2/Classes/Triangle/: Triangle.cpp  Triangle.h
homework_11_4/: CMakeLists.txt  Main.cpp  homework_11_4.sln  homework_11_4.vcxproj
homework_11_4/Lib/Equilateral_triangle/: Equilateral_triangle.h
homework_11_4/Lib/Error/: Error.cpp  Error.h
homework_11_4/Lib/Isosceles_triangle/: Isosceles_triangle.h
homework_11_4/Lib/Parallelogram/: Parallelogram.h
homework_11_4/Lib/Print/: Print.cpp  Print.h
homework_11_4/Lib/Quadrangle/: Quadrangle.cpp  Quadrangle.h
homework_11_4/Lib/Rectangle/: Rectangle.h
homework_11_4/Lib/Rhomb/: Rhomb.h
homework_11_4/Lib/Right_angled_triangle/: Right_angled_triangle.h
homework_11_4/Lib/Shape/: Shape.h
homework_11_4/Lib/Square/: Square.h
homework_11_4/Lib/Triangle/: Triangle.h
homework_11_4/ShapeLib/: Equilateral_triangle.cpp  Equilateral_triangle.h  Error.cpp  Error.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Print.cpp  Print.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  Right_angled_triangle.cpp  Right_angled_triangle.h  Shape.cpp  Shape.h  ShapeLib.vcxproj  ShapeLib.vcxproj.filters  Square.cpp  Square.h  Triangle.cpp  Triangle.h
sqlcpp_homework_5_01/: CMakeLists.txt  database.cpp  main.cpp
sqlcpp_homework_5_01/include/: database.cpp  database.h
(+185 files in other folders)
